version/0.19/_sources/api/solver/_autosummary/settings/zone_assignment_1.rst.txt
:orphan:

.. _zone_assignment_1:

zone_assignment
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.zone_assignment_1.zone_assignment
    :show-inheritance:

.. rubric:: Attributes

==================================   =============================

Attribute                                                  Summary

==================================   =============================
:ref:`active_zone <active_zone>`         Set battery active zones.

:ref:`passive_zone <passive_zone>`              Set passive zones.

:ref:`positive_tab <positive_tab>`           'positive_tab' child.

:ref:`negative_tab <negative_tab>`           'negative_tab' child.

==================================   =============================

.. rubric:: Methods

==========================================================   =========================================

Method                                                                                         Summary

==========================================================   =========================================
:ref:`virtual_connection <virtual_connection>`                           'virtual_connection' command.

:ref:`print_battery_connection <print_battery_connection>`       Print battery connection information.

==========================================================   =========================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`battery <battery>`       'battery' child.

========================   ====================

