version/0.24/_sources/api/solver/_autosummary/settings/zone_assignment_1.rst.txt
:orphan:

.. _zone_assignment_1:

zone_assignment
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.zone_assignment_1.zone_assignment
    :show-inheritance:

.. rubric:: Attributes

========================================================   ==================================

Attribute                                                                             Summary

========================================================   ==================================
:ref:`active_zone <active_zone>`                                    Set battery active zones.

:ref:`passive_zone <passive_zone>`                                         Set passive zones.

:ref:`passive_zone_tab <passive_zone_tab>`                        Set tab conductive regions.

:ref:`virtual_connection <virtual_connection>`                        Use virtual connection.

:ref:`virtual_connection_file <virtual_connection_file>`        Virtual connection file name.

:ref:`positive_tab <positive_tab>`                             Set positive terminal surface.

:ref:`negative_tab <negative_tab>`                             Set negative terminal surface.

========================================================   ==================================

.. rubric:: Methods

==========================================================   =========================================

Method                                                                                         Summary

==========================================================   =========================================
:ref:`print_battery_connection <print_battery_connection>`       Print battery connection information.

==========================================================   =========================================

.. rubric:: Included in:

========================   ===========================

Parent                                         Summary

========================   ===========================
:ref:`battery <battery>`       Battery model settings.

========================   ===========================

